--- a/core/core/package.json
+++ b/core/core/package.json
@@ -5,7 +5,7 @@
   "author": "熊猫 <1054064180@qq.com>",
   "homepage": "https://github.com/Ewall1106/lerna-cli/tree/main/packages/core#readme",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "bin": {
     "panda": "bin/index.js"
   },
@@ -16,6 +16,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ewall1106/panda-cli.git"
@@ -26,10 +29,10 @@
   "bugs": {
     "url": "https://github.com/Ewall1106/panda-cli/issues"
   },
-  "publishConfig": {
-    "access": "public"
-  },
   "dependencies": {
-    "@panda-cli/utils": "file:../../utils/utils"
+    "@panda-cli/utils": "file:../../utils/utils",
+    "@panda-cli/logs": "file:../../utils/logs",
+    "import-local": "^3.0.2",
+    "npmlog": "^5.0.0"
   }
 }
