--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "homepage": "https://github.com/Ewall1106/lerna-cli#readme",
   "dependencies": {
     "lerna": "^4.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.2"
   }
 }
