--- a/core/core/package.json
+++ b/core/core/package.json
@@ -33,6 +33,7 @@
     "@panda-cli/logs": "file:../../utils/logs",
     "@panda-cli/utils": "file:../../utils/utils",
     "colors": "^1.4.0",
+    "dotenv": "^10.0.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
     "npmlog": "^5.0.0",
