--- a/core/core/package.json
+++ b/core/core/package.json
@@ -30,10 +30,11 @@
     "url": "https://github.com/Ewall1106/panda-cli/issues"
   },
   "dependencies": {
+    "@panda-cli/get-npm-info": "file:../../utils/get-npm-info",
     "@panda-cli/logs": "file:../../utils/logs",
     "@panda-cli/utils": "file:../../utils/utils",
-    "@panda-cli/get-npm-info": "file:../../utils/get-npm-info",
     "colors": "^1.4.0",
+    "commander": "^8.1.0",
     "dotenv": "^10.0.0",
     "import-local": "^3.0.2",
     "minimist": "^1.2.5",
