--- a/core/core/package.json
+++ b/core/core/package.json
@@ -33,6 +33,7 @@
     "@panda-cli/get-npm-info": "file:../../utils/get-npm-info",
     "@panda-cli/logs": "file:../../utils/logs",
     "@panda-cli/utils": "file:../../utils/utils",
+    "@panda-cli/init": "file:../../commands/init",
     "colors": "^1.4.0",
     "commander": "^8.1.0",
     "dotenv": "^10.0.0",
