feat：获取入口文件路径

--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/Ewall1106/panda-cli/issues"
   },
   "dependencies": {
-    "@panda-cli/package": "file:../../models/package"
+    "@panda-cli/package": "file:../../models/package",
+    "@panda-cli/logs": "file:../../utils/logs"
   }
 }
