--- a/utils/format-path/package.json
+++ b/utils/format-path/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@panda-cli/package",
+  "name": "@panda-cli/format-path",
   "version": "1.0.1",
   "description": "> TODO: description",
   "author": "xiongwei",
-  "homepage": "https://github.com/Ewall1106/lerna-cli/tree/main/models/package#readme",
+  "homepage": "https://github.com/Ewall1106/lerna-cli/tree/main/utils/format-path#readme",
   "license": "ISC",
   "main": "lib/index.js",
   "directories": {
@@ -14,7 +14,7 @@
     "lib"
   ],
   "publishConfig": {
-    "registry": "http://npm.intra.xiaojukeji.com/"
+    "registry": "https://registry.npm.taobao.org/"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,5 @@
   },
   "bugs": {
     "url": "https://github.com/Ewall1106/panda-cli/issues"
-  },
-  "dependencies": {
-    "@panda-cli/format-path": "file:../../utils/format-path",
-    "pkg-dir": "^5.0.0"
   }
 }
